--- a/sbc_test/config.yml
+++ b/sbc_test/config.yml
@@ -16,7 +16,7 @@ SHUFFLE_ROUND_COUNT: 90
 # `2**4` (= 16)
 MIN_GENESIS_ACTIVE_VALIDATOR_COUNT: 2048
 # Jul 18, 2021, 14:30am UTC
-MIN_GENESIS_TIME: 1627978300
+MIN_GENESIS_TIME: 1628061600
 # 4
 HYSTERESIS_QUOTIENT: 4
 # 1 (minus 0.25)
@@ -29,7 +29,7 @@ HYSTERESIS_UPWARD_MULTIPLIER: 5
 SAFE_SLOTS_TO_UPDATE_JUSTIFIED: 8
 # Validator
 # ---------------------------------------------------------------
-# 2**1 (= 2)
+# 2**1 (= 2) ~16 min
 ETH1_FOLLOW_DISTANCE: 64
 # 2**4 (= 16)
 TARGET_AGGREGATORS_PER_COMMITTEE: 16
@@ -46,7 +46,7 @@ SECONDS_PER_ETH1_BLOCK: 15
 DEPOSIT_CHAIN_ID: 4
 DEPOSIT_NETWORK_ID: 4
 # Pyrmont test deposit contract on Rinkeby
-DEPOSIT_CONTRACT_ADDRESS: 0x0043e6fF8032299616C770a264a9c6FD1157EF48
+DEPOSIT_CONTRACT_ADDRESS: 0x53Fcce65E351a0466fEd47a4b4F2258F0239702f
 # Gwei values
 # ---------------------------------------------------------------
 # 2**0 * 10**8 (= 100,000,000) Gwei
@@ -64,8 +64,8 @@ GENESIS_FORK_VERSION: 0x00006464
 BLS_WITHDRAWAL_PREFIX: 0x00
 # Time parameters
 # ---------------------------------------------------------------
-# Customized for Test: 36 seconds
-GENESIS_DELAY: 600
+# Customized for Test: ~30 min
+GENESIS_DELAY: 1800
 # 12 seconds
 SECONDS_PER_SLOT: 8
 # 2**0 (= 1) slots 12 seconds
