--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ RPC_URL=https://rinkeby.infura.io/v3/...
 
 DEPLOYMENT_PRIVATE_KEY=...
 
+# number of deposits to send in one tx
 BATCH_SIZE=128
+# number of deposit to start sending with
 OFFSET=0
+# total number of deposits to send
 N=2048
