--- a/sbc_test/docker-compose.yml
+++ b/sbc_test/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: prysmaticlabs/prysm-beacon-chain:v1.4.2
     command: |
       --accept-terms-of-use
-      --contract-deployment-block 9057317
+      --contract-deployment-block 9063718
       --http-web3provider https://rinkeby.infura.io/v3/8e6efb6da18f4861b45aa22494b129c9
       --bootstrap-node ""
       --config-file /config
@@ -18,6 +18,9 @@ services:
       - ./config.yml:/config
       - ./nodekey1.txt:/nodekey1
       - ./node1:/home/.eth2/beaconchaindata
+    logging:
+      driver: syslog
+      options: { tag: '{{.Name}}/{{.ID}}' }
     networks:
       sbc:
         ipv4_address: 192.168.144.2
@@ -25,7 +28,7 @@ services:
     image: prysmaticlabs/prysm-beacon-chain:v1.4.2
     command: |
       --accept-terms-of-use
-      --contract-deployment-block 9057317
+      --contract-deployment-block 9063718
       --http-web3provider https://rinkeby.infura.io/v3/8e6efb6da18f4861b45aa22494b129c9
       --bootstrap-node ""
       --config-file /config
@@ -40,6 +43,9 @@ services:
       - ./config.yml:/config
       - ./nodekey2.txt:/nodekey2
       - ./node2:/home/.eth2/beaconchaindata
+    logging:
+      driver: syslog
+      options: { tag: '{{.Name}}/{{.ID}}' }
     networks:
       sbc:
         ipv4_address: 192.168.144.3
@@ -82,6 +88,9 @@ services:
       - ./password.txt:/password
       - ./config.yml:/config
       - ./wallet:/home/.eth2validators/prysm-wallet-v2
+    logging:
+      driver: syslog
+      options: { tag: '{{.Name}}/{{.ID}}' }
     networks:
       sbc:
   explorer:
@@ -91,6 +100,9 @@ services:
       - ./explorer/config.yml:/explorer_config
       - ./config.yml:/config
       - ./explorer/imprint.html:/imprint
+    logging:
+      driver: syslog
+      options: { tag: '{{.Name}}/{{.ID}}' }
     ports:
       - '3333:3333'
     networks:
@@ -105,6 +117,9 @@ services:
     volumes:
       - ./db:/var/lib/postgresql/data
       - ./explorer/tables.sql:/docker-entrypoint-initdb.d/tables.sql
+    logging:
+      driver: syslog
+      options: { tag: '{{.Name}}/{{.ID}}' }
     networks:
       sbc:
 networks:
