--- a/sbc_test/explorer/explorer.config.yml
+++ b/sbc_test/explorer/explorer.config.yml
@@ -11,7 +11,7 @@ chain:
   network: "stake"
   slotsPerEpoch: 16
   secondsPerSlot: 7
-  genesisTimestamp: 1629037740
+  genesisTimestamp: 1630337660
   minGenesisActiveValidatorCount: 2048
 
 # Note: It is possible to run either the frontend or the indexer or both at the same time
@@ -39,7 +39,7 @@ frontend:
   sessionSecret: "<sessionSecret>"
   email:
     mailgun:
-  eth1ExplorerBase: 'https://rinkeby.etherscan.io' # 'https://blockscout.com/xdai/mainnet'
+  eth1ExplorerBase: 'https://blockscout.com/poa/sokol'
 
 # Indexer config
 indexer:
@@ -48,9 +48,9 @@ indexer:
   indexMissingEpochsOnStartup: false # Check for missing epochs and export them after startup
   node:
     # host: "$INDEXER_NODE_PORT"
-    port: "4000" # port of the backend node
-    type: "prysm" # can be either prysm or lighthouse
+    port: "5052" # port of the backend node
+    type: "lighthouse" # can be either prysm or lighthouse
     pageSize: 250 # the amount of entries to fetch per paged rpc call
-  eth1Endpoint: 'https://rinkeby.infura.io/v3/07f11b60dae241e6b2b878c1de5d4a65'
-  eth1DepositContractAddress: '0x96df26e0779b4db7d9F941a0Df468Dd8cFBE6913'
-  eth1DepositContractFirstBlock: 9101504
+  eth1Endpoint: 'https://sokol.poa.network'
+  eth1DepositContractAddress: '0x9EF616631C87991076af5E636b36667c335fd6dA'
+  eth1DepositContractFirstBlock: 22512289
