--- a/sbc_test/docker-compose.node.yml
+++ b/sbc_test/docker-compose.node.yml
@@ -1,14 +1,14 @@
 version: '3.8'
 services:
   node:
-    image: gcr.io/prysmaticlabs/prysm/beacon-chain:altair-devnet-3
+    image: ghcr.io/canarynetwork/prysm-beacon-chain:v2.0.0rc1-unstable
     command: |
       --accept-terms-of-use
-      --contract-deployment-block 22512289
+      --contract-deployment-block 22694907
       --http-web3provider $XDAI_RPC_URL
-      --bootstrap-node $BOOTNODE
-      --config-file /sbc_test/config/config.prysm.yml
-      --chain-config-file /sbc_test/config/config.prysm.yml
+      --bootstrap-node /sbc_test/config/boot_enr.yaml
+      --config-file /sbc_test/config/config.yaml
+      --chain-config-file /sbc_test/config/config.yaml
       --rpc-host 0.0.0.0
       --p2p-local-ip 0.0.0.0
       --p2p-host-ip $IP_NODE
@@ -17,6 +17,7 @@ services:
       --grpc-gateway-host 0.0.0.0
       --monitoring-host 0.0.0.0
       --verbosity debug
+      --enable-debug-rpc-endpoints
     ports:
       - '12000:12000/udp'
       - '13000:13000'
@@ -30,7 +31,7 @@ services:
       driver: syslog
       options: { tag: '{{.Name}}/{{.ID}}' }
   validator-init:
-    image: gcr.io/prysmaticlabs/prysm/validator:v1.3.11
+    image: ghcr.io/canarynetwork/prysm-validator:v2.0.0rc1-unstable
     command: |
       wallet recover
       --accept-terms-of-use
@@ -42,7 +43,7 @@ services:
       - /root/sbc_test/config:/sbc_test/config
       - /root/sbc_test/wallet:/home/.eth2validators/prysm-wallet-v2
   validator-import:
-    image: gcr.io/prysmaticlabs/prysm/validator:v1.3.11
+    image: ghcr.io/canarynetwork/prysm-validator:v2.0.0rc1-unstable
     command: |
       accounts import
       --accept-terms-of-use
@@ -53,7 +54,7 @@ services:
       - /root/sbc_test/config:/sbc_test/config
       - /root/sbc_test/wallet:/home/.eth2validators/prysm-wallet-v2
   validator-list:
-    image: gcr.io/prysmaticlabs/prysm/validator:v1.3.11
+    image: ghcr.io/canarynetwork/prysm-validator:v2.0.0rc1-unstable
     command: |
       accounts list
       --accept-terms-of-use
@@ -62,7 +63,7 @@ services:
       - /root/sbc_test/config:/sbc_test/config
       - /root/sbc_test/wallet:/home/.eth2validators/prysm-wallet-v2
   validator-exit:
-    image: gcr.io/prysmaticlabs/prysm/validator:v1.3.11
+    image: ghcr.io/canarynetwork/prysm-validator:v2.0.0rc1-unstable
     command: |
       accounts voluntary-exit
       --public-keys $PUBKEY
@@ -75,18 +76,18 @@ services:
       - /root/sbc_test/config:/sbc_test/config
       - /root/sbc_test/wallet:/home/.eth2validators/prysm-wallet-v2
   validator:
-    image: gcr.io/prysmaticlabs/prysm/validator:v1.3.11
+    image: ghcr.io/canarynetwork/prysm-validator:v2.0.0rc1-unstable
     command: |
       --accept-terms-of-use
-      --config-file /sbc_test/config/config.prysm.yml
-      --chain-config-file /sbc_test/config/config.prysm.yml
+      --config-file /sbc_test/config/config.yaml
+      --chain-config-file /sbc_test/config/config.yaml
       --wallet-password-file /sbc_test/config/wallet_password.txt
       --beacon-rpc-provider node:4000
     volumes:
       - /root/sbc_test/config:/sbc_test/config
       - /root/sbc_test/wallet:/home/.eth2validators/prysm-wallet-v2
   validator2:
-    image: gcr.io/prysmaticlabs/prysm/validator:v1.3.11
+    image: ghcr.io/canarynetwork/prysm-validator:v2.0.0rc1-unstable
     command: |
       --accept-terms-of-use
       --config-file /sbc_test/config/config.yaml
