--- a/sbc_test/common/config.yaml
+++ b/sbc_test/common/config.yaml
@@ -66,7 +66,7 @@ BLS_WITHDRAWAL_PREFIX: 0x00
 # Time parameters
 # ---------------------------------------------------------------
 # Customized for Test: ~4 hours
-GENESIS_DELAY: 84000
+GENESIS_DELAY: 2176800
 # 12 seconds
 SECONDS_PER_SLOT: 5
 # 2**0 (= 1) slots 12 seconds
@@ -138,7 +138,7 @@ DOMAIN_SYNC_COMMITTEE_SELECTION_PROOF: 0x08000000
 DOMAIN_CONTRIBUTION_AND_PROOF: 0x09000000
 
 ALTAIR_FORK_VERSION: 0x01006464
-ALTAIR_FORK_EPOCH: 64
+ALTAIR_FORK_EPOCH: 5120
 
 INACTIVITY_SCORE_BIAS: 4
 # 2**4 (= 16)
