--- a/sbc_test/common/config.yaml
+++ b/sbc_test/common/config.yaml
@@ -15,9 +15,9 @@ CHURN_LIMIT_QUOTIENT: 4096
 # See issue 563
 SHUFFLE_ROUND_COUNT: 90
 # `2**4` (= 16)
-MIN_GENESIS_ACTIVE_VALIDATOR_COUNT: 2048
+MIN_GENESIS_ACTIVE_VALIDATOR_COUNT: 4096
 # Jul 18, 2021, 14:30am UTC
-MIN_GENESIS_TIME: 1628196000
+MIN_GENESIS_TIME: 1637663820
 # 4
 HYSTERESIS_QUOTIENT: 4
 # 1 (minus 0.25)
@@ -47,7 +47,7 @@ SECONDS_PER_ETH1_BLOCK: 7
 DEPOSIT_CHAIN_ID: 77
 DEPOSIT_NETWORK_ID: 77
 # Pyrmont test deposit contract on Rinkeby
-DEPOSIT_CONTRACT_ADDRESS: 0x884f39b6E401b08c2E67012b0525528281070cc2
+DEPOSIT_CONTRACT_ADDRESS: 0x6e972C68068E7E38478f16E7e54e4552eC82e23f
 # Gwei values
 # ---------------------------------------------------------------
 # 2**0 * 10**8 (= 100,000,000) Gwei
@@ -66,9 +66,9 @@ BLS_WITHDRAWAL_PREFIX: 0x00
 # Time parameters
 # ---------------------------------------------------------------
 # Customized for Test: ~4 hours
-GENESIS_DELAY: 2285800
+GENESIS_DELAY: 1200
 # 12 seconds
-SECONDS_PER_SLOT: 7
+SECONDS_PER_SLOT: 5
 # 2**0 (= 1) slots 12 seconds
 MIN_ATTESTATION_INCLUSION_DELAY: 1
 # 2**5 (= 32) slots 6.4 minutes
@@ -101,7 +101,7 @@ VALIDATOR_REGISTRY_LIMIT: 1099511627776
 # Reward and penalty quotients
 # ---------------------------------------------------------------
 # 2**6 (= 64)
-BASE_REWARD_FACTOR: 14
+BASE_REWARD_FACTOR: 25
 # 2**9 (= 512)
 WHISTLEBLOWER_REWARD_QUOTIENT: 512
 # 2**3 (= 8)
@@ -138,7 +138,7 @@ DOMAIN_SYNC_COMMITTEE_SELECTION_PROOF: 0x08000000
 DOMAIN_CONTRIBUTION_AND_PROOF: 0x09000000
 
 ALTAIR_FORK_VERSION: 0x01006464
-ALTAIR_FORK_EPOCH: 10240
+ALTAIR_FORK_EPOCH: 512
 
 INACTIVITY_SCORE_BIAS: 4
 # 2**4 (= 16)
