--- a/sbc_test/docker-compose.lighthouse.yml
+++ b/sbc_test/docker-compose.lighthouse.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   node:
-    image: ghcr.io/openethereum/sbc-lighthouse:v2.0.1-sbc
+    image: ghcr.io/openethereum/sbc-lighthouse:v2.0.1-gbc
     command: |
       lighthouse beacon_node
       --testnet-dir /sbc_test/config
@@ -22,7 +22,7 @@ services:
       - /root/sbc_test/node_db:/home/.eth2/beaconchaindata
       - /root/sbc_test/slasher_db:/home/.eth2/slasherdata
   validator-init:
-    image: ghcr.io/openethereum/sbc-lighthouse:v2.0.1-sbc
+    image: ghcr.io/openethereum/sbc-lighthouse:v2.0.1-gbc
     command: |
       lighthouse account_manager validator import
       --testnet-dir /sbc_test/config
@@ -34,7 +34,7 @@ services:
       - /root/sbc_test/config:/sbc_test/config
       - /root/sbc_test/validators:/sbc_test/validators
   validator:
-    image: ghcr.io/openethereum/sbc-lighthouse:v2.0.1-sbc
+    image: ghcr.io/openethereum/sbc-lighthouse:v2.0.1-gbc
     command: |
       lighthouse validator_client
       --testnet-dir /sbc_test/config
